<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="avatar_description">author_avatar</string>
    <string name="description_post_menu">Post_menu</string>
    <string name="description_post_content">content</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="description_post_save">Save</string>
    <string name="editing_post">Editing</string>
    />
</resources>